Lattice still shows edges with "Bounds" display type. #88443

Closed
opened 2021-05-20 22:28:44 +02:00 by Will · 9 comments

System Information
Operating system: Linux
Graphics card: Intel

Blender Version
Broken: 2.92

Short description of error

When the display type of a Lattice object is set to "Bounds", all its edges will still be drawn in addition to its bounding volume.

image.png

This is quite annoying for really dense lattices. With more than a couple dozen subdivisions, they're basically drawn as solid blocks of colour.

Exact steps for others to reproduce the error

Make a lattice object with at least one dimension that has a greater resolution than two.

Set its display type to "Bounds".

**System Information** Operating system: Linux Graphics card: Intel **Blender Version** Broken: 2.92 **Short description of error** When the display type of a Lattice object is set to "Bounds", all its edges will still be drawn in addition to its bounding volume. ![image.png](https://archive.blender.org/developer/F10131606/image.png) This is quite annoying for really dense lattices. With more than a couple dozen subdivisions, they're basically drawn as solid blocks of colour. **Exact steps for others to reproduce the error** Make a lattice object with at least one dimension that has a greater resolution than two. Set its display type to "Bounds".
Author

Added subscriber: @WCN

Added subscriber: @WCN
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-05-21 15:26:33 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Note you could hide drawing the lattice "edges" when disabling Extras:

image.png

Cameras, lights, lightprobes and speakers have a similar issue (but these dont have bounding boxes defined - maybe these types should not give the Bounds choice at all...).
Lattices do though and I agree it makes sense to disable the extra drawing for lattices in that case.

Can confirm. Note you could hide drawing the lattice "edges" when disabling `Extras`: ![image.png](https://archive.blender.org/developer/F10133981/image.png) `Cameras`, `lights`, `lightprobes` and `speakers` have a similar issue (but these dont have bounding boxes defined - maybe these types should not give the `Bounds` choice at all...). Lattices do though and I agree it makes sense to disable the extra drawing for lattices in that case.

This issue was referenced by b3b2cd1fa9

This issue was referenced by b3b2cd1fa9f28f698e385a96fbc137db8c9415af

This issue was referenced by 6806459246

This issue was referenced by 6806459246255440aade69bc0e00a40325dfd95c

This issue was referenced by 4599748962

This issue was referenced by 45997489622869b206b8fdacba0586e14f402722

This issue was referenced by 6c0c766bca

This issue was referenced by 6c0c766bcaa013007e12f2fd3e308d83cd95594c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88443
No description provided.